# scme-tracker

./: .gitignore  CLAUDE.md  README.md  config.py  csv_scraper.py  maine-2025-priority-bills.csv  pyproject.toml  run_scraper.py
archive/: maine-2025-priority-bills_2025-02-27.csv  maine-2025-priority-bills_2025-03-03.csv  maine-2025-priority-bills_2025-03-04.csv  maine-2025-priority-bills_2025-03-05.csv  maine-2025-priority-bills_2025-03-06.csv  maine-2025-priority-bills_2025-03-07.csv  maine-2025-priority-bills_2025-03-08.csv  maine-2025-priority-bills_2025-03-10.csv  maine-2025-priority-bills_2025-03-11.csv  maine-2025-priority-bills_2025-03-12.csv  maine-2025-priority-bills_2025-03-13.csv  maine-2025-priority-bills_2025-03-14.csv  maine-2025-priority-bills_2025-03-15.csv  maine-2025-priority-bills_2025-03-17.csv  maine-2025-priority-bills_2025-03-18.csv  maine-2025-priority-bills_2025-03-19.csv  maine-2025-priority-bills_2025-03-20.csv  maine-2025-priority-bills_2025-03-21.csv  maine-2025-priority-bills_2025-03-23.csv  maine-2025-priority-bills_2025-03-24.csv  maine-2025-priority-bills_2025-03-25.csv  maine-2025-priority-bills_2025-03-26.csv  maine-2025-priority-bills_2025-03-27.csv  maine-2025-priority-bills_2025-03-28.csv  maine-2025-priority-bills_2025-03-31.csv  maine-2025-priority-bills_2025-04-01.csv  maine-2025-priority-bills_2025-04-02.csv  maine-2025-priority-bills_2025-04-03.csv  maine-2025-priority-bills_2025-04-04.csv  maine-2025-priority-bills_2025-04-08.csv  maine-2025-priority-bills_2025-04-09.csv  maine-2025-priority-bills_2025-04-10.csv  (+194 more)
(+1 files in other folders)
